--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,6 +5,11 @@ authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
+[contracts.loyalty-tier]
+path = 'contracts/loyalty-tier.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.loyalty-token]
 path = 'contracts/loyalty-token.clar'
 clarity_version = 2
